--- a/colors.less
+++ b/colors.less
@@ -340,3 +340,57 @@
 @link-9: rgb(var(--link-9));
 @link-10: rgb(var(--link-10));
 
+@dark-primary-1: rgb(var(--primary-1));
+@dark-primary-2: rgb(var(--primary-2));
+@dark-primary-3: rgb(var(--primary-3));
+@dark-primary-4: rgb(var(--primary-4));
+@dark-primary-5: rgb(var(--primary-5));
+@dark-primary-6: rgb(var(--primary-6));
+@dark-primary-7: rgb(var(--primary-7));
+@dark-primary-8: rgb(var(--primary-8));
+@dark-primary-9: rgb(var(--primary-9));
+@dark-primary-10: rgb(var(--primary-10));
+
+@dark-success-1: rgb(var(--success-1));
+@dark-success-2: rgb(var(--success-2));
+@dark-success-3: rgb(var(--success-3));
+@dark-success-4: rgb(var(--success-4));
+@dark-success-5: rgb(var(--success-5));
+@dark-success-6: rgb(var(--success-6));
+@dark-success-7: rgb(var(--success-7));
+@dark-success-8: rgb(var(--success-8));
+@dark-success-9: rgb(var(--success-9));
+@dark-success-10: rgb(var(--success-10));
+
+@dark-danger-1: rgb(var(--danger-1));
+@dark-danger-2: rgb(var(--danger-2));
+@dark-danger-3: rgb(var(--danger-3));
+@dark-danger-4: rgb(var(--danger-4));
+@dark-danger-5: rgb(var(--danger-5));
+@dark-danger-6: rgb(var(--danger-6));
+@dark-danger-7: rgb(var(--danger-7));
+@dark-danger-8: rgb(var(--danger-8));
+@dark-danger-9: rgb(var(--danger-9));
+@dark-danger-10: rgb(var(--danger-10));
+
+@dark-warning-1: rgb(var(--warning-1));
+@dark-warning-2: rgb(var(--warning-2));
+@dark-warning-3: rgb(var(--warning-3));
+@dark-warning-4: rgb(var(--warning-4));
+@dark-warning-5: rgb(var(--warning-5));
+@dark-warning-6: rgb(var(--warning-6));
+@dark-warning-7: rgb(var(--warning-7));
+@dark-warning-8: rgb(var(--warning-8));
+@dark-warning-9: rgb(var(--warning-9));
+@dark-warning-10: rgb(var(--warning-10));
+
+@dark-link-1: rgb(var(--link-1));
+@dark-link-2: rgb(var(--link-2));
+@dark-link-3: rgb(var(--link-3));
+@dark-link-4: rgb(var(--link-4));
+@dark-link-5: rgb(var(--link-5));
+@dark-link-6: rgb(var(--link-6));
+@dark-link-7: rgb(var(--link-7));
+@dark-link-8: rgb(var(--link-8));
+@dark-link-9: rgb(var(--link-9));
+@dark-link-10: rgb(var(--link-10));
