--- a/colors.less
+++ b/colors.less
@@ -296,49 +296,49 @@
 @primary-9: rgb(var(--primary-9));
 @primary-10: rgb(var(--primary-10));
 
-@success-1: rgb(var(--success-1));
-@success-2: rgb(var(--success-2));
-@success-3: rgb(var(--success-3));
-@success-4: rgb(var(--success-4));
-@success-5: rgb(var(--success-5));
-@success-6: rgb(var(--success-6));
-@success-7: rgb(var(--success-7));
-@success-8: rgb(var(--success-8));
-@success-9: rgb(var(--success-9));
-@success-10: rgb(var(--success-10));
+@success-1: rgb(var(--green-1));
+@success-2: rgb(var(--green-2));
+@success-3: rgb(var(--green-3));
+@success-4: rgb(var(--green-4));
+@success-5: rgb(var(--green-5));
+@success-6: rgb(var(--green-6));
+@success-7: rgb(var(--green-7));
+@success-8: rgb(var(--green-8));
+@success-9: rgb(var(--green-9));
+@success-10: rgb(var(--green-10));
 
-@danger-1: rgb(var(--danger-1));
-@danger-2: rgb(var(--danger-2));
-@danger-3: rgb(var(--danger-3));
-@danger-4: rgb(var(--danger-4));
-@danger-5: rgb(var(--danger-5));
-@danger-6: rgb(var(--danger-6));
-@danger-7: rgb(var(--danger-7));
-@danger-8: rgb(var(--danger-8));
-@danger-9: rgb(var(--danger-9));
-@danger-10: rgb(var(--danger-10));
+@danger-1: rgb(var(--red-1));
+@danger-2: rgb(var(--red-2));
+@danger-3: rgb(var(--red-3));
+@danger-4: rgb(var(--red-4));
+@danger-5: rgb(var(--red-5));
+@danger-6: rgb(var(--red-6));
+@danger-7: rgb(var(--red-7));
+@danger-8: rgb(var(--red-8));
+@danger-9: rgb(var(--red-9));
+@danger-10: rgb(var(--red-10));
 
-@warning-1: rgb(var(--warning-1));
-@warning-2: rgb(var(--warning-2));
-@warning-3: rgb(var(--warning-3));
-@warning-4: rgb(var(--warning-4));
-@warning-5: rgb(var(--warning-5));
-@warning-6: rgb(var(--warning-6));
-@warning-7: rgb(var(--warning-7));
-@warning-8: rgb(var(--warning-8));
-@warning-9: rgb(var(--warning-9));
-@warning-10: rgb(var(--warning-10));
+@warning-1: rgb(var(--orange-1));
+@warning-2: rgb(var(--orange-2));
+@warning-3: rgb(var(--orange-3));
+@warning-4: rgb(var(--orange-4));
+@warning-5: rgb(var(--orange-5));
+@warning-6: rgb(var(--orange-6));
+@warning-7: rgb(var(--orange-7));
+@warning-8: rgb(var(--orange-8));
+@warning-9: rgb(var(--orange-9));
+@warning-10: rgb(var(--orange-10));
 
-@link-1: rgb(var(--link-1));
-@link-2: rgb(var(--link-2));
-@link-3: rgb(var(--link-3));
-@link-4: rgb(var(--link-4));
-@link-5: rgb(var(--link-5));
-@link-6: rgb(var(--link-6));
-@link-7: rgb(var(--link-7));
-@link-8: rgb(var(--link-8));
-@link-9: rgb(var(--link-9));
-@link-10: rgb(var(--link-10));
+@link-1: rgb(var(--geekblue-1));
+@link-2: rgb(var(--geekblue-2));
+@link-3: rgb(var(--geekblue-3));
+@link-4: rgb(var(--geekblue-4));
+@link-5: rgb(var(--geekblue-5));
+@link-6: rgb(var(--geekblue-6));
+@link-7: rgb(var(--geekblue-7));
+@link-8: rgb(var(--geekblue-8));
+@link-9: rgb(var(--geekblue-9));
+@link-10: rgb(var(--geekblue-10));
 
 @dark-primary-1: rgb(var(--primary-1));
 @dark-primary-2: rgb(var(--primary-2));
@@ -351,46 +351,46 @@
 @dark-primary-9: rgb(var(--primary-9));
 @dark-primary-10: rgb(var(--primary-10));
 
-@dark-success-1: rgb(var(--success-1));
-@dark-success-2: rgb(var(--success-2));
-@dark-success-3: rgb(var(--success-3));
-@dark-success-4: rgb(var(--success-4));
-@dark-success-5: rgb(var(--success-5));
-@dark-success-6: rgb(var(--success-6));
-@dark-success-7: rgb(var(--success-7));
-@dark-success-8: rgb(var(--success-8));
-@dark-success-9: rgb(var(--success-9));
-@dark-success-10: rgb(var(--success-10));
+@dark-success-1: rgb(var(--green-1));
+@dark-success-2: rgb(var(--green-2));
+@dark-success-3: rgb(var(--green-3));
+@dark-success-4: rgb(var(--green-4));
+@dark-success-5: rgb(var(--green-5));
+@dark-success-6: rgb(var(--green-6));
+@dark-success-7: rgb(var(--green-7));
+@dark-success-8: rgb(var(--green-8));
+@dark-success-9: rgb(var(--green-9));
+@dark-success-10: rgb(var(--green-10));
 
-@dark-danger-1: rgb(var(--danger-1));
-@dark-danger-2: rgb(var(--danger-2));
-@dark-danger-3: rgb(var(--danger-3));
-@dark-danger-4: rgb(var(--danger-4));
-@dark-danger-5: rgb(var(--danger-5));
-@dark-danger-6: rgb(var(--danger-6));
-@dark-danger-7: rgb(var(--danger-7));
-@dark-danger-8: rgb(var(--danger-8));
-@dark-danger-9: rgb(var(--danger-9));
-@dark-danger-10: rgb(var(--danger-10));
+@dark-danger-1: rgb(var(--red-1));
+@dark-danger-2: rgb(var(--red-2));
+@dark-danger-3: rgb(var(--red-3));
+@dark-danger-4: rgb(var(--red-4));
+@dark-danger-5: rgb(var(--red-5));
+@dark-danger-6: rgb(var(--red-6));
+@dark-danger-7: rgb(var(--red-7));
+@dark-danger-8: rgb(var(--red-8));
+@dark-danger-9: rgb(var(--red-9));
+@dark-danger-10: rgb(var(--red-10));
 
-@dark-warning-1: rgb(var(--warning-1));
-@dark-warning-2: rgb(var(--warning-2));
-@dark-warning-3: rgb(var(--warning-3));
-@dark-warning-4: rgb(var(--warning-4));
-@dark-warning-5: rgb(var(--warning-5));
-@dark-warning-6: rgb(var(--warning-6));
-@dark-warning-7: rgb(var(--warning-7));
-@dark-warning-8: rgb(var(--warning-8));
-@dark-warning-9: rgb(var(--warning-9));
-@dark-warning-10: rgb(var(--warning-10));
+@dark-warning-1: rgb(var(--orange-1));
+@dark-warning-2: rgb(var(--orange-2));
+@dark-warning-3: rgb(var(--orange-3));
+@dark-warning-4: rgb(var(--orange-4));
+@dark-warning-5: rgb(var(--orange-5));
+@dark-warning-6: rgb(var(--orange-6));
+@dark-warning-7: rgb(var(--orange-7));
+@dark-warning-8: rgb(var(--orange-8));
+@dark-warning-9: rgb(var(--orange-9));
+@dark-warning-10: rgb(var(--orange-10));
 
-@dark-link-1: rgb(var(--link-1));
-@dark-link-2: rgb(var(--link-2));
-@dark-link-3: rgb(var(--link-3));
-@dark-link-4: rgb(var(--link-4));
-@dark-link-5: rgb(var(--link-5));
-@dark-link-6: rgb(var(--link-6));
-@dark-link-7: rgb(var(--link-7));
-@dark-link-8: rgb(var(--link-8));
-@dark-link-9: rgb(var(--link-9));
-@dark-link-10: rgb(var(--link-10));
+@dark-link-1: rgb(var(--geekblue-1));
+@dark-link-2: rgb(var(--geekblue-2));
+@dark-link-3: rgb(var(--geekblue-3));
+@dark-link-4: rgb(var(--geekblue-4));
+@dark-link-5: rgb(var(--geekblue-5));
+@dark-link-6: rgb(var(--geekblue-6));
+@dark-link-7: rgb(var(--geekblue-7));
+@dark-link-8: rgb(var(--geekblue-8));
+@dark-link-9: rgb(var(--geekblue-9));
+@dark-link-10: rgb(var(--geekblue-10));
