--- a/css-variables.less
+++ b/css-variables.less
@@ -184,136 +184,136 @@ body {
 }
 
 body[twist-theme='dark'] { 
-  --red-1: get-rgb-str(@red-1);
-  --red-2: get-rgb-str(@red-2);
-  --red-3: get-rgb-str(@red-3);
-  --red-4: get-rgb-str(@red-4);
-  --red-5: get-rgb-str(@red-5);
-  --red-6: get-rgb-str(@red-6);
-  --red-7: get-rgb-str(@red-7);
-  --red-8: get-rgb-str(@red-8);
-  --red-9: get-rgb-str(@red-9);
-  --red-10: get-rgb-str(@red-10);
-  --volcano-1: get-rgb-str(@volcano-1);
-  --volcano-2: get-rgb-str(@volcano-2);
-  --volcano-3: get-rgb-str(@volcano-3);
-  --volcano-4: get-rgb-str(@volcano-4);
-  --volcano-5: get-rgb-str(@volcano-5);
-  --volcano-6: get-rgb-str(@volcano-6);
-  --volcano-7: get-rgb-str(@volcano-7);
-  --volcano-8: get-rgb-str(@volcano-8);
-  --volcano-9: get-rgb-str(@volcano-9);
-  --volcano-10: get-rgb-str(@volcano-10);
-  --orange-1: get-rgb-str(@orange-1);
-  --orange-2: get-rgb-str(@orange-2);
-  --orange-3: get-rgb-str(@orange-3);
-  --orange-4: get-rgb-str(@orange-4);
-  --orange-5: get-rgb-str(@orange-5);
-  --orange-6: get-rgb-str(@orange-6);
-  --orange-7: get-rgb-str(@orange-7);
-  --orange-8: get-rgb-str(@orange-8);
-  --orange-9: get-rgb-str(@orange-9);
-  --orange-10: get-rgb-str(@orange-10);
-  --gold-1: get-rgb-str(@gold-1);
-  --gold-2: get-rgb-str(@gold-2);
-  --gold-3: get-rgb-str(@gold-3);
-  --gold-4: get-rgb-str(@gold-4);
-  --gold-5: get-rgb-str(@gold-5);
-  --gold-6: get-rgb-str(@gold-6);
-  --gold-7: get-rgb-str(@gold-7);
-  --gold-8: get-rgb-str(@gold-8);
-  --gold-9: get-rgb-str(@gold-9);
-  --gold-10: get-rgb-str(@gold-10);
-  --yellow-1: get-rgb-str(@yellow-1);
-  --yellow-2: get-rgb-str(@yellow-2);
-  --yellow-3: get-rgb-str(@yellow-3);
-  --yellow-4: get-rgb-str(@yellow-4);
-  --yellow-5: get-rgb-str(@yellow-5);
-  --yellow-6: get-rgb-str(@yellow-6);
-  --yellow-7: get-rgb-str(@yellow-7);
-  --yellow-8: get-rgb-str(@yellow-8);
-  --yellow-9: get-rgb-str(@yellow-9);
-  --yellow-10: get-rgb-str(@yellow-10);
-  --lime-1: get-rgb-str(@lime-1);
-  --lime-2: get-rgb-str(@lime-2);
-  --lime-3: get-rgb-str(@lime-3);
-  --lime-4: get-rgb-str(@lime-4);
-  --lime-5: get-rgb-str(@lime-5);
-  --lime-6: get-rgb-str(@lime-6);
-  --lime-7: get-rgb-str(@lime-7);
-  --lime-8: get-rgb-str(@lime-8);
-  --lime-9: get-rgb-str(@lime-9);
-  --lime-10: get-rgb-str(@lime-10);
-  --green-1: get-rgb-str(@green-1);
-  --green-2: get-rgb-str(@green-2);
-  --green-3: get-rgb-str(@green-3);
-  --green-4: get-rgb-str(@green-4);
-  --green-5: get-rgb-str(@green-5);
-  --green-6: get-rgb-str(@green-6);
-  --green-7: get-rgb-str(@green-7);
-  --green-8: get-rgb-str(@green-8);
-  --green-9: get-rgb-str(@green-9);
-  --green-10: get-rgb-str(@green-10);
-  --cyan-1: get-rgb-str(@cyan-1);
-  --cyan-2: get-rgb-str(@cyan-2);
-  --cyan-3: get-rgb-str(@cyan-3);
-  --cyan-4: get-rgb-str(@cyan-4);
-  --cyan-5: get-rgb-str(@cyan-5);
-  --cyan-6: get-rgb-str(@cyan-6);
-  --cyan-7: get-rgb-str(@cyan-7);
-  --cyan-8: get-rgb-str(@cyan-8);
-  --cyan-9: get-rgb-str(@cyan-9);
-  --cyan-10: get-rgb-str(@cyan-10);
-  --blue-1: get-rgb-str(@blue-1);
-  --blue-2: get-rgb-str(@blue-2);
-  --blue-3: get-rgb-str(@blue-3);
-  --blue-4: get-rgb-str(@blue-4);
-  --blue-5: get-rgb-str(@blue-5);
-  --blue-6: get-rgb-str(@blue-6);
-  --blue-7: get-rgb-str(@blue-7);
-  --blue-8: get-rgb-str(@blue-8);
-  --blue-9: get-rgb-str(@blue-9);
-  --blue-10: get-rgb-str(@blue-10);
-  --geekblue-1: get-rgb-str(@geekblue-1);
-  --geekblue-2: get-rgb-str(@geekblue-2);
-  --geekblue-3: get-rgb-str(@geekblue-3);
-  --geekblue-4: get-rgb-str(@geekblue-4);
-  --geekblue-5: get-rgb-str(@geekblue-5);
-  --geekblue-6: get-rgb-str(@geekblue-6);
-  --geekblue-7: get-rgb-str(@geekblue-7);
-  --geekblue-8: get-rgb-str(@geekblue-8);
-  --geekblue-9: get-rgb-str(@geekblue-9);
-  --geekblue-10: get-rgb-str(@geekblue-10);
-  --purple-1: get-rgb-str(@purple-1);
-  --purple-2: get-rgb-str(@purple-2);
-  --purple-3: get-rgb-str(@purple-3);
-  --purple-4: get-rgb-str(@purple-4);
-  --purple-5: get-rgb-str(@purple-5);
-  --purple-6: get-rgb-str(@purple-6);
-  --purple-7: get-rgb-str(@purple-7);
-  --purple-8: get-rgb-str(@purple-8);
-  --purple-9: get-rgb-str(@purple-9);
-  --purple-10: get-rgb-str(@purple-10);
-  --magenta-1: get-rgb-str(@magenta-1);
-  --magenta-2: get-rgb-str(@magenta-2);
-  --magenta-3: get-rgb-str(@magenta-3);
-  --magenta-4: get-rgb-str(@magenta-4);
-  --magenta-5: get-rgb-str(@magenta-5);
-  --magenta-6: get-rgb-str(@magenta-6);
-  --magenta-7: get-rgb-str(@magenta-7);
-  --magenta-8: get-rgb-str(@magenta-8);
-  --magenta-9: get-rgb-str(@magenta-9);
-  --magenta-10: get-rgb-str(@magenta-10);
-  --grey-1: get-rgb-str(@grey-1);
-  --grey-2: get-rgb-str(@grey-2);
-  --grey-3: get-rgb-str(@grey-3);
-  --grey-4: get-rgb-str(@grey-4);
-  --grey-5: get-rgb-str(@grey-5);
-  --grey-6: get-rgb-str(@grey-6);
-  --grey-7: get-rgb-str(@grey-7);
-  --grey-8: get-rgb-str(@grey-8);
-  --grey-9: get-rgb-str(@grey-9);
-  --grey-10: get-rgb-str(@grey-10);
+  --red-1: get-rgb-str(@dark-red-1);
+  --red-2: get-rgb-str(@dark-red-2);
+  --red-3: get-rgb-str(@dark-red-3);
+  --red-4: get-rgb-str(@dark-red-4);
+  --red-5: get-rgb-str(@dark-red-5);
+  --red-6: get-rgb-str(@dark-red-6);
+  --red-7: get-rgb-str(@dark-red-7);
+  --red-8: get-rgb-str(@dark-red-8);
+  --red-9: get-rgb-str(@dark-red-9);
+  --red-10: get-rgb-str(@dark-red-10);
+  --volcano-1: get-rgb-str(@dark-volcano-1);
+  --volcano-2: get-rgb-str(@dark-volcano-2);
+  --volcano-3: get-rgb-str(@dark-volcano-3);
+  --volcano-4: get-rgb-str(@dark-volcano-4);
+  --volcano-5: get-rgb-str(@dark-volcano-5);
+  --volcano-6: get-rgb-str(@dark-volcano-6);
+  --volcano-7: get-rgb-str(@dark-volcano-7);
+  --volcano-8: get-rgb-str(@dark-volcano-8);
+  --volcano-9: get-rgb-str(@dark-volcano-9);
+  --volcano-10: get-rgb-str(@dark-volcano-10);
+  --orange-1: get-rgb-str(@dark-orange-1);
+  --orange-2: get-rgb-str(@dark-orange-2);
+  --orange-3: get-rgb-str(@dark-orange-3);
+  --orange-4: get-rgb-str(@dark-orange-4);
+  --orange-5: get-rgb-str(@dark-orange-5);
+  --orange-6: get-rgb-str(@dark-orange-6);
+  --orange-7: get-rgb-str(@dark-orange-7);
+  --orange-8: get-rgb-str(@dark-orange-8);
+  --orange-9: get-rgb-str(@dark-orange-9);
+  --orange-10: get-rgb-str(@dark-orange-10);
+  --gold-1: get-rgb-str(@dark-gold-1);
+  --gold-2: get-rgb-str(@dark-gold-2);
+  --gold-3: get-rgb-str(@dark-gold-3);
+  --gold-4: get-rgb-str(@dark-gold-4);
+  --gold-5: get-rgb-str(@dark-gold-5);
+  --gold-6: get-rgb-str(@dark-gold-6);
+  --gold-7: get-rgb-str(@dark-gold-7);
+  --gold-8: get-rgb-str(@dark-gold-8);
+  --gold-9: get-rgb-str(@dark-gold-9);
+  --gold-10: get-rgb-str(@dark-gold-10);
+  --yellow-1: get-rgb-str(@dark-yellow-1);
+  --yellow-2: get-rgb-str(@dark-yellow-2);
+  --yellow-3: get-rgb-str(@dark-yellow-3);
+  --yellow-4: get-rgb-str(@dark-yellow-4);
+  --yellow-5: get-rgb-str(@dark-yellow-5);
+  --yellow-6: get-rgb-str(@dark-yellow-6);
+  --yellow-7: get-rgb-str(@dark-yellow-7);
+  --yellow-8: get-rgb-str(@dark-yellow-8);
+  --yellow-9: get-rgb-str(@dark-yellow-9);
+  --yellow-10: get-rgb-str(@dark-yellow-10);
+  --lime-1: get-rgb-str(@dark-lime-1);
+  --lime-2: get-rgb-str(@dark-lime-2);
+  --lime-3: get-rgb-str(@dark-lime-3);
+  --lime-4: get-rgb-str(@dark-lime-4);
+  --lime-5: get-rgb-str(@dark-lime-5);
+  --lime-6: get-rgb-str(@dark-lime-6);
+  --lime-7: get-rgb-str(@dark-lime-7);
+  --lime-8: get-rgb-str(@dark-lime-8);
+  --lime-9: get-rgb-str(@dark-lime-9);
+  --lime-10: get-rgb-str(@dark-lime-10);
+  --green-1: get-rgb-str(@dark-green-1);
+  --green-2: get-rgb-str(@dark-green-2);
+  --green-3: get-rgb-str(@dark-green-3);
+  --green-4: get-rgb-str(@dark-green-4);
+  --green-5: get-rgb-str(@dark-green-5);
+  --green-6: get-rgb-str(@dark-green-6);
+  --green-7: get-rgb-str(@dark-green-7);
+  --green-8: get-rgb-str(@dark-green-8);
+  --green-9: get-rgb-str(@dark-green-9);
+  --green-10: get-rgb-str(@dark-green-10);
+  --cyan-1: get-rgb-str(@dark-cyan-1);
+  --cyan-2: get-rgb-str(@dark-cyan-2);
+  --cyan-3: get-rgb-str(@dark-cyan-3);
+  --cyan-4: get-rgb-str(@dark-cyan-4);
+  --cyan-5: get-rgb-str(@dark-cyan-5);
+  --cyan-6: get-rgb-str(@dark-cyan-6);
+  --cyan-7: get-rgb-str(@dark-cyan-7);
+  --cyan-8: get-rgb-str(@dark-cyan-8);
+  --cyan-9: get-rgb-str(@dark-cyan-9);
+  --cyan-10: get-rgb-str(@dark-cyan-10);
+  --blue-1: get-rgb-str(@dark-blue-1);
+  --blue-2: get-rgb-str(@dark-blue-2);
+  --blue-3: get-rgb-str(@dark-blue-3);
+  --blue-4: get-rgb-str(@dark-blue-4);
+  --blue-5: get-rgb-str(@dark-blue-5);
+  --blue-6: get-rgb-str(@dark-blue-6);
+  --blue-7: get-rgb-str(@dark-blue-7);
+  --blue-8: get-rgb-str(@dark-blue-8);
+  --blue-9: get-rgb-str(@dark-blue-9);
+  --blue-10: get-rgb-str(@dark-blue-10);
+  --geekblue-1: get-rgb-str(@dark-geekblue-1);
+  --geekblue-2: get-rgb-str(@dark-geekblue-2);
+  --geekblue-3: get-rgb-str(@dark-geekblue-3);
+  --geekblue-4: get-rgb-str(@dark-geekblue-4);
+  --geekblue-5: get-rgb-str(@dark-geekblue-5);
+  --geekblue-6: get-rgb-str(@dark-geekblue-6);
+  --geekblue-7: get-rgb-str(@dark-geekblue-7);
+  --geekblue-8: get-rgb-str(@dark-geekblue-8);
+  --geekblue-9: get-rgb-str(@dark-geekblue-9);
+  --geekblue-10: get-rgb-str(@dark-geekblue-10);
+  --purple-1: get-rgb-str(@dark-purple-1);
+  --purple-2: get-rgb-str(@dark-purple-2);
+  --purple-3: get-rgb-str(@dark-purple-3);
+  --purple-4: get-rgb-str(@dark-purple-4);
+  --purple-5: get-rgb-str(@dark-purple-5);
+  --purple-6: get-rgb-str(@dark-purple-6);
+  --purple-7: get-rgb-str(@dark-purple-7);
+  --purple-8: get-rgb-str(@dark-purple-8);
+  --purple-9: get-rgb-str(@dark-purple-9);
+  --purple-10: get-rgb-str(@dark-purple-10);
+  --magenta-1: get-rgb-str(@dark-magenta-1);
+  --magenta-2: get-rgb-str(@dark-magenta-2);
+  --magenta-3: get-rgb-str(@dark-magenta-3);
+  --magenta-4: get-rgb-str(@dark-magenta-4);
+  --magenta-5: get-rgb-str(@dark-magenta-5);
+  --magenta-6: get-rgb-str(@dark-magenta-6);
+  --magenta-7: get-rgb-str(@dark-magenta-7);
+  --magenta-8: get-rgb-str(@dark-magenta-8);
+  --magenta-9: get-rgb-str(@dark-magenta-9);
+  --magenta-10: get-rgb-str(@dark-magenta-10);
+  --grey-1: get-rgb-str(@dark-grey-1);
+  --grey-2: get-rgb-str(@dark-grey-2);
+  --grey-3: get-rgb-str(@dark-grey-3);
+  --grey-4: get-rgb-str(@dark-grey-4);
+  --grey-5: get-rgb-str(@dark-grey-5);
+  --grey-6: get-rgb-str(@dark-grey-6);
+  --grey-7: get-rgb-str(@dark-grey-7);
+  --grey-8: get-rgb-str(@dark-grey-8);
+  --grey-9: get-rgb-str(@dark-grey-9);
+  --grey-10: get-rgb-str(@dark-grey-10);
   --primary-1: get-var-str(~'@{dark-primary-1}');
   --primary-2: get-var-str(~'@{dark-primary-2}');
   --primary-3: get-var-str(~'@{dark-primary-3}');
